# findx

./: .gitignore  CHANGELOG.md  Cargo.toml  Directory.Build.props  FindX.sln  LICENSE  PROMOTION.md  README.md  build.ps1  stop
.github/workflows/: pages.yml  release.yml
crates/findx2-cli/: Cargo.toml
crates/findx2-cli/src/: main.rs  remote.rs
crates/findx2-core/: Cargo.toml
crates/findx2-core/benches/: pinyin_perf.rs  search_perf.rs
crates/findx2-core/examples/: real_index_bench.rs  write_fixture_index.rs
crates/findx2-core/src/: error.rs  index.rs  lib.rs  meta_overlay.rs  persist.rs  platform.rs  query.rs  search.rs
crates/findx2-core/tests/: pinyin_files_for_test.rs  roundtrip.rs
crates/findx2-ipc/: Cargo.toml
crates/findx2-ipc/src/: lib.rs
crates/findx2-linux/: Cargo.toml
crates/findx2-linux/src/: lib.rs
crates/findx2-macos/: Cargo.toml
crates/findx2-macos/src/: lib.rs
crates/findx2-service/: Cargo.toml
crates/findx2-service/src/: backfill.rs  cli.rs  everything_ipc.rs  main.rs  pipe_server.rs  run.rs  win_service.rs
crates/findx2-windows/: Cargo.toml
crates/findx2-windows/src/: full_index_build.rs  lib.rs  metadata_fill.rs  mft.rs  mft_read.rs  nt_dir_query.rs  open_by_id.rs  usn.rs  volumes.rs
docs/: index.html
gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
gui/scripts/: bundle-win-exes.mjs
gui/src/: App.tsx  desktop.ts  main.tsx
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
gui/src-tauri/bundled/: .gitignore
gui/src-tauri/capabilities/: default.json
gui/src-tauri/cpp/: scanner.cpp
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: app_update.rs  desktop.rs  elevate.rs  findx_settings.rs  lib.rs  main.rs  pipe.rs  win_file_context_menu.rs  win_preview.rs
gui/src-tauri/windows/: nsis-installer-hooks.nsh
gui/src/findx/: FindXSearchApp.tsx  PreviewPane.tsx  SettingsWindow.tsx  findx.css  findxGuiTypes.ts
installer/: FindX.iss  stage-inno.ps1
native/FindXNative/: FindXNative.vcxproj  build.ps1
native/findx-engine/: Cargo.toml
native/findx-engine/src/: engine.rs  ffi.rs  lib.rs  trigram.rs
src/FindX.Bench/: FindX.Bench.csproj  Program.cs
src/FindX.Cli/: FindX.Cli.csproj  Program.cs
src/FindX.Client/: FindX.Client.csproj  FindXClient.cs  FindXResult.cs
src/FindX.Core/: FindX.Core.csproj
src/FindX.Core/Diagnostics/: SearchPerfLog.cs
src/FindX.Core/FileSystem/: FallbackWatcher.cs  FileMetadataReader.cs  JournalWatcher.cs  VolumeScanner.cs
src/FindX.Core/Index/: FileEntry.cs  FileIndex.cs
src/FindX.Core/Interop/: NativeInterop.cs  RustIndexNative.cs  VolumeAccessHelper.cs  Win32Message.cs
src/FindX.Core/Pinyin/: PinyinMatcher.cs  PinyinTable.cs  PinyinTokenizer.cs
src/FindX.Core/Search/: MatchMode.cs  QueryAst.cs  QueryParser.cs  QueryTokenizer.cs  Scorer.cs  SearchEngine.cs  SearchHighlightBuilder.cs  SearchPreferences.cs
src/FindX.Core/Storage/: IndexSerializer.cs
src/FindX.Core/Update/: UpdateChecker.cs  UpdateInstaller.cs
src/FindX.Native/: CMakeLists.txt  FindXNative.cpp  FindXNative.h
src/FindX.Service/: EverythingIpcServer.cs  FindX.Service.csproj  IpcServer.cs  Program.cs  SearchWindow.xaml  SearchWindow.xaml.cs  ServiceHost.cs  TrayWindow.xaml  TrayWindow.xaml.cs  UserSettings.cs  app.manifest
src/FindX.Tests/: BooleanTests.cs  EverythingSyntaxCompatTests.cs  FilterTests.cs  FindX.Tests.csproj  IndexPersistenceTests.cs  MatchingTests.cs  ParserTests.cs  PinyinCoverageTests.cs  PinyinSearchTests.cs  QuerySyntaxCoverageTests.cs  SearchMetadataTests.cs  SearchRegressionTests.cs  TestHelpers.cs  TokenizerTests.cs
