[package]
name = "findx2-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "findx2 常驻索引服务：命名管道 IPC、USN 增量、Everything SDK IPC"

[[bin]]
name = "findx2-service"
path = "src/main.rs"

[dependencies]
findx2-core = { path = "../findx2-core", features = ["pinyin"] }
findx2-ipc = { path = "../findx2-ipc" }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"

[target.'cfg(windows)'.dependencies]
findx2-windows = { path = "../findx2-windows" }
windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
] }
