[package]
name = "findx2-windows"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "findx2 Windows：MFT 枚举与 USN 增量"

[dependencies]
findx2-core = { path = "../findx2-core" }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
rayon = "1"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
] }
