[package]
name = "findx2-gui"
version = "2.0.1"
description = "FindX2 Tauri GUI"
edition = "2021"

[lib]
name = "findx2_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 必须启用 custom-protocol：否则 tauri 的 build.rs 会把 cfg(dev) 置为真，
# 正式包仍会走 devUrl（127.0.0.1:1420），未开 Vite 即 ERR_CONNECTION_REFUSED。
tauri = { version = "2", features = ["custom-protocol", "protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
findx2-ipc = { path = "../../crates/findx2-ipc" }
tokio = { version = "1", features = ["rt", "macros", "io-util", "net", "process", "time", "sync"] }

[target.'cfg(windows)'.dependencies]
arboard = "3"
findx2-windows = { path = "../../crates/findx2-windows" }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_System_Ole", "Win32_System_ProcessStatus", "Win32_System_Registry", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_Shell_PropertiesSystem", "Win32_UI_WindowsAndMessaging"] }
windows-core = "0.61"
